[package]
name = "recipe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
structopt = "0.3"
url = "2.2"
reqwest = "0.11"
tokio = {version = "1.12", features=["full"]}
scraper = "0.12"
